...
                          ),
                        ],
                      ),
                      const SizedBox(height: 8),
                      Expanded(
                        child: poiPresent.isEmpty
                            ? const Center(child: Text('No matching results'))
                            : ListView.builder(
                                itemCount: poiPresent.length,
                                itemBuilder: (context, i) {
                                  final result = poiPresent[i];

                                  String subtitle = "";
...
